--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-loader": "^8.2.1",
     "css-loader": "^5.0.1",
     "html-webpack-plugin": "^4.5.0",
+    "react-router-dom": "^5.3.0",
     "style-loader": "^2.0.0",
     "webpack": "^5.5.1",
     "webpack-cli": "^4.2.0",
@@ -28,6 +29,7 @@
     "@babel/preset-react": "^7.12.5",
     "axios": "^0.21.4",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-router": "^5.2.1"
   }
 }
